Added the main html and css, also the img and most of the visuals are ok -- time to work on the js game logic and dom manipulation

--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ScoreKeeper</title>
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
-    
+    <div id="wrapper">
+        <h1>Score Keeper</h1>
+        <div>Game Exercise</div>
+        <img class="portrait" src="static/images/pingpong.jpg" alt="ping pong">
+        <div id="score">X to X</div>
+        <div>Use the buttons below to keep score</div>
+        <div>
+            <span>Playing To</span>
+            <select name="" id="">
+                <option value="1">1</option>
+                <option value="2">2</option>
+            </select>
+        </div>
+        <div id="buttons-wrapper">
+            <button id="p1btn">Player one</button>
+            <button id="p2btn">Player two</button>
+            <button>Reset</button>
+        </div>
+    </div>
 </body>
+<script src="static/app.js"></script>
 </html>
