I now added more functionalities like spans to scores & some logic to the options values

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <h1>Score Keeper</h1>
         <div>Game Exercise</div>
         <img class="portrait" src="static/images/pingpong.jpg" alt="ping pong">
-        <div id="score">X to X</div>
+        <div id="score">
+            <span class="scores" id="scorep1">0</span>
+            <span>To</span>
+            <span class="scores" id="scorep2">0</span>
+        </div>
         <div>Use the buttons below to keep score</div>
         <div>
             <span>Playing To</span>
@@ -24,7 +28,7 @@
         <div id="buttons-wrapper">
             <button id="p1btn">Player one</button>
             <button id="p2btn">Player two</button>
-            <button>Reset</button>
+            <button id="reset">Reset</button>
         </div>
     </div>
 </body>
