Finished the game logic and di some options addons at index, also created the winner and looser classes at css

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
         <div>Use the buttons below to keep score</div>
         <div>
             <span>Playing To</span>
-            <select name="" id="">
-                <option value="1">1</option>
-                <option value="2">2</option>
+            <select name="" id="playTo">
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
             </select>
         </div>
         <div id="buttons-wrapper">
@@ -32,5 +35,6 @@
         </div>
     </div>
 </body>
+<script src="static/lib.js"></script>
 <script src="static/app.js"></script>
 </html>
